# oktopus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: build-docker.yml
data/: documents-meta.json
data/documents/: Definitions-of-technical-terms-fragments1.md  Definitions-of-technical-terms-fragments2.md  Definitions-of-technical-terms-fragments3.md  Definitions-of-technical-terms-fragments4.md  Definitions-of-technical-terms-fragments5.md  Q3 2023 Outokumpu interim report-1.md  Q3 2023 Outokumpu interim report-10.md  Q3 2023 Outokumpu interim report-11.md  Q3 2023 Outokumpu interim report-12.md  Q3 2023 Outokumpu interim report-13.md  Q3 2023 Outokumpu interim report-14.md  Q3 2023 Outokumpu interim report-15.md  Q3 2023 Outokumpu interim report-16.md  Q3 2023 Outokumpu interim report-17.md  Q3 2023 Outokumpu interim report-18.md  Q3 2023 Outokumpu interim report-19.md  Q3 2023 Outokumpu interim report-2.md  Q3 2023 Outokumpu interim report-20.md  Q3 2023 Outokumpu interim report-21.md  Q3 2023 Outokumpu interim report-22.md  Q3 2023 Outokumpu interim report-23.md  Q3 2023 Outokumpu interim report-24.md  Q3 2023 Outokumpu interim report-25.md  Q3 2023 Outokumpu interim report-26.md  Q3 2023 Outokumpu interim report-27.md  Q3 2023 Outokumpu interim report-28.md  Q3 2023 Outokumpu interim report-3.md  Q3 2023 Outokumpu interim report-4.md  Q3 2023 Outokumpu interim report-5.md  Q3 2023 Outokumpu interim report-6.md  Q3 2023 Outokumpu interim report-7.md  Q3 2023 Outokumpu interim report-8.md  Q3 2023 Outokumpu interim report-9.md  Rivals-fragments1.md  Rivals-fragments2.md  Rivals-fragments3.md  Rivals-fragments4.md  energy-utilization-in-the-complete-steel-manufacturing-process-fragments1.md  energy-utilization-in-the-complete-steel-manufacturing-process-fragments2.md  energy-utilization-in-the-complete-steel-manufacturing-process-fragments3.md  (+20 more)
docs/: gen_code_docs_pages.py  index.md
frontend/: package-lock.json  package.json  postcss.config.cjs  svelte.config.js
frontend/src/: app.html  app.scss  variables.scss
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: DocNode.svelte
frontend/src/routes/: +page.svelte
octopus/: __init__.py
oktopus/: chunk2vector.py  data_models.py  db.py  main.py  settings.py
oktopus/scripts/: __init__.py  convert_docs2vectors.py  sample_queries.py
scripts/: const.py  convert_docs2vectors.py  sample_queries.py
tests/: __init__.py  test_octopus.py
